# Launcher

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/workflows/: quality.yml  release.yml
assets/fonts/: LICENSE-MATERIAL-ICONS.txt
assets/locales/: en-US.json  zh-CN.json
assets/themes/: dark.json  light.json
docs/: PLUGIN_API.md  PLUGIN_SYSTEM.md  USER_GUIDE.md
include/launcher/: AppIdentity.hpp  AppSettings.hpp  Models.hpp  NativePluginApi.h  SDK_MN.hpp  ThemeTypes.hpp
src/: main.cpp
src/app/: AppContext.cpp  AppContext.hpp  Application.cpp  Application.hpp
src/core/: AnimatedBackground.cpp  AnimatedBackground.hpp  ConfigStore.cpp  ConfigStore.hpp  GlobalFileIndex.cpp  GlobalFileIndex.hpp  GlobalFileItem.hpp  GlobalFileProvider.hpp  LaunchParameterUtils.cpp  LaunchParameterUtils.hpp  LauncherService.cpp  LauncherService.hpp  LocalVolumeFileProvider.cpp  LocalVolumeFileProvider.hpp  ModelActions.cpp  ModelActions.hpp  NotesStore.cpp  NotesStore.hpp  PluginManager.cpp  PluginManager.hpp  SearchIndex.cpp  SearchIndex.hpp  StringEncoding.hpp  ThemeStore.cpp  ThemeStore.hpp
src/data/: SeedData.cpp  SeedData.hpp
src/platform/: SystemIntegration.cpp  SystemIntegration.hpp  Win32Window.cpp  Win32Window.hpp
src/resources/: app.rc
src/ui/: ConfigTransfer.cpp  Localization.cpp  MainDock.cpp  MainDockCategoryRail.cpp  MainDockCategoryRail.hpp  MainDockChrome.cpp  MainDockChrome.hpp  MainDockContextMenus.cpp  MainDockContextMenus.hpp  MainDockDialogs.cpp  MainDockDialogs.hpp  MainDockDragPayload.hpp  MainDockGrid.cpp  MainDockGrid.hpp  MainDockItemEditor.cpp  MainDockItemEditor.hpp  MainDockItemViews.cpp  MainDockItemViews.hpp  MainDockMenu.cpp  MainDockMenu.hpp  MainDockNotes.cpp  MainDockNotes.hpp  MainDockSearch.cpp  MainDockSearch.hpp  MainDockState.cpp  MainDockState.hpp  MainDockWin32.cpp  MainDockWin32.hpp  MarkdownView.cpp  MarkdownView.hpp  MaterialIconRegistry.cpp  MaterialIcons.hpp  SettingsPanel.cpp  SettingsPanel.hpp  ThemeEditor.cpp  UiAnimation.cpp  UiAnimation.hpp  UiTheme.cpp  UiTheme.hpp  UserGuideView.cpp  (+1 more)
src/ui/common/: Localization.cpp  Localization.hpp  MaterialIconRegistry.cpp  MaterialIconRegistry.hpp  MaterialIcons.hpp  UiAnimation.cpp  UiAnimation.hpp  UiChrome.cpp  UiChrome.hpp  UiTheme.cpp  UiTheme.hpp
src/ui/dock/: MainDock.cpp  MainDock.hpp  MainDockCallbacks.hpp  MainDockCategoryRail.cpp  MainDockCategoryRail.hpp  MainDockChrome.cpp  MainDockContextMenus.cpp  MainDockContextMenus.hpp  MainDockDialogs.cpp  MainDockDialogs.hpp  MainDockGrid.cpp  MainDockGrid.hpp  MainDockItemEditor.cpp  MainDockItemEditor.hpp  MainDockItemViews.cpp  MainDockItemViews.hpp  MainDockMenu.cpp  MainDockMenu.hpp  MainDockNavigation.cpp  MainDockNavigation.hpp  MainDockNotes.cpp  MainDockNotes.hpp  MainDockSearch.cpp  MainDockSearch.hpp  MainDockState.cpp  MainDockState.hpp  MainDockUiState.hpp  MainDockWin32.cpp
src/ui/notes/: NoteImageService.cpp  NoteImageService.hpp
src/ui/platform/: UiPlatform.cpp  UiPlatform.hpp
src/ui/rendering/: MainDockResources.cpp  MainDockResources.hpp
src/ui/settings/: ConfigTransfer.cpp  ConfigTransfer.hpp  SettingsPages.cpp  SettingsPages.hpp  SettingsPanel.cpp  SettingsWidgets.cpp  SettingsWidgets.hpp  ThemeEditor.cpp  ThemeEditor.hpp
src/ui/views/: MarkdownView.cpp  MarkdownView.hpp  UserGuideView.cpp  UserGuideView.hpp
src/update/: UpdateService.cpp  UpdateService.hpp  UpdaterMain.cpp
tests/: MainDockNavigationTests.cpp  MarkdownRenderTest.md  SearchIndexTests.cpp  UiDependencyTests.cmake
tests/plugins/sample_calc/: plugin.json
tests/plugins/sample_cli/: plugin.json
tests/plugins/sample_color/: plugin.json
tests/plugins/sample_echo/: SampleEchoPlugin.cpp  plugin.json
tests/plugins/sample_native/: SampleNativePlugin.cpp  plugin.json
tests/plugins/sample_toolbox/: SampleToolboxPlugin.cpp
